# api/swagger/swagger.yaml
@@ -18,30 +18,6 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/GeneralResponse"
   /feeds:
     # binds a127 app logic to a route
     x-swagger-router-controller: feed
@@ -103,7 +79,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/GeneralResponse"
-  /feed:
+  /feed/{id}:
     # binds a127 app logic to a route
     x-swagger-router-controller: feed
     get:
@@ -114,7 +90,7 @@ paths:
         required: true
         type: string
       - name: id
-        in: query
+        in: path
         description: Id of the feed to be returned
         required: true
         type: string
@@ -139,12 +115,15 @@ paths:
       produces:
       - application/json
       parameters:
+      - name: facebookaccesstoken
+        in: header
+        type: string
       - name: idToken
         in: header
         required: true
         type: string
       - name: id
-        in: query
+        in: path
         required: true
         type: string
       - name: feed
@@ -173,7 +152,7 @@ paths:
         required: true
         type: string
       - name: id
-        in: query
+        in: path
         description: Id of the feed to be deleted
         required: true
         type: string
@@ -189,16 +168,200 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/GeneralResponse"
+  /feed/{id}/socialPosts:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: socialPost
+    get:
+      description: Returns list of feeds to caller
+      # used as the method name of the controller
+      operationId: getSocialPosts
+      parameters:
+      - name: id
+        in: path
+        required: true
+        type: string
+      - name: idToken
+        in: header
+        required: true
+        type: string
+      responses:
+        "200":
+          description: A list of socialPosts.
+          schema:
+            type: array
+            items:
+              # a pointer to a definition
+              $ref: "#/definitions/SocialPost"
+        # responses may fall through to errors
+        "403":
+          description: Forbidden due to access error
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        required: true
+        type: string
+      - name: idtoken
+        in: header
+        required: true
+        type: string
+      - name: socialPosts
+        in: body
+        required: true
+        schema:
+          type: array
+          items:
+            $ref: "#/definitions/SocialPost"
+      description: Create a feed
+      # used as the method name of the controller
+      operationId: postSocialPost
+      responses:
+        "200":
+          description: Newly created feed
+          schema:
+            type: array
+            items:
+              # a pointer to a definition
+              $ref: "#/definitions/SocialPost"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+  /socialPost/{id}:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: socialPost
+    get:
+      description: Returns the feed for the supplied id to the caller
+      parameters:
+      - name: idToken
+        in: header
+        required: true
+        type: string
+      - name: id
+        in: path
+        description: Id of the feed to be returned
+        required: true
+        type: string
+      # used as the method name of the controller
+      operationId: getSocialPostById
+      responses:
+        "200":
+          description: A list of SocialPosts.
+          schema:
+            type: array
+            items:
+              # a pointer to a definition
+              $ref: "#/definitions/SocialPost"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+    put:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: idToken
+        in: header
+        required: true
+        type: string
+      - name: id
+        in: path
+        required: true
+        type: string
+      - name: socialPost
+        in: body
+        required: true
+        schema:
+          $ref: "#/definitions/SocialPost"
+      description: Update an existing feed
+      # used as the method name of the controller
+      operationId: putSocialPostById
+      responses:
+        "200":
+          description: Updated an existing feed
+          schema:
+            $ref: "#/definitions/PutResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+    delete:
+      description: Deletes the feed for the provided id
+      parameters:
+      - name: idToken
+        in: header
+        required: true
+        type: string
+      - name: id
+        in: path
+        description: Id of the feed to be deleted
+        required: true
+        type: string
+      # used as the method name of the controller
+      operationId: deleteSocialPostById
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+  /feed/{id}/scrapNewPostsFromSource:
+    x-swagger-router-controller: feed
+    post:
+        consumes:
+        - application/json
+        produces:
+        - application/json
+        parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+        - name: idtoken
+          in: header
+          required: true
+          type: string
+        - name: contentText
+          in: body
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        description: Create a feed
+        # used as the method name of the controller
+        operationId: scrapNewPostsFromSource
+        responses:
+          "200":
+            description: Newly created feed
+            schema:
+              $ref: "#/definitions/GeneralResponse"
+          # responses may fall through to errors
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/GeneralResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
   GeneralResponse:
     required:
       - message
@@ -217,7 +380,6 @@ definitions:
   Feed:
     type: object
     required:
-      - uid
       - feedName
       - feedType
     properties:
@@ -248,3 +410,53 @@ definitions:
       hashTag:
         type: string
         maxLength: 50
+  SocialPost:
+    type: object
+    required:
+      - uid
+      - feedId
+      - profileId
+    properties:
+      _id:
+        type: string
+      uid:
+        type: string
+      feedId:
+        type: string
+      profileId:
+        type: string
+      profileName:
+        type: string
+      profileImageUrl:
+        type: string
+      postText:
+        type: string
+      postMediaUrl:
+        type: string
+      postMediaType:
+        type: string
+        default: none
+        enum:
+        - none
+        - image
+        - video
+        - audio
+      postedOn:
+        type: string
+        format: 'YYYY-mm-ddT07:01:36+0000'
+      rawPost:
+        type: object
+      tags:
+        type: array
+        items:
+          type: string
+      metaData:
+        type: object
+      approvalStatus:
+        type: string
+        default: new
+        enum:
+        - new
+        - approved
+        - rejected
+        - deleted
